--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "start": "node app/index.js",
     "dev": "nodemon --exec babel-node app/index.js",
     "test": "cross-env NODE_ENV=test nyc --require @babel/register --reporter=lcov --reporter=text --reporter=text-summary mocha test/** --exit --timeout=15000",
+    "pretest": "npm run migrate-test:down && npm run migrate-test:up",
+    "posttest": "npm run migrate-test:down",
     "lint": "eslint . --ext .js ./",
-    "lint-fix": "eslint . --ext .js ./ --fix"
+    "lint-fix": "eslint . --ext .js ./ --fix",
+    "migrate:up": "db-migrate up",
+    "migrate:down": "db-migrate down -c 100",
+    "migrate-test:up": "db-migrate up --config database.json -e test",
+    "migrate-test:down": "db-migrate down -c 100 --config database.json -e test"
   },
   "repository": {
     "type": "git",
@@ -23,18 +29,26 @@
   "homepage": "https://github.com/lawrecks/movies-api#readme",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "axios": "^0.26.1",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^9.2.2",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "nock": "^13.2.4",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
+    "pg-promise": "^10.11.1",
     "supertest": "^2.0.1",
     "winston": "^3.6.0"
   },
