--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 DATABASE_DEV_URL=postgres://username:password@host:port/database_name
 DATABASE_TEST_URL=postgres://username:password@host:port/database_name
 DATABASE_PROD_URL=postgres://username:password@host:port/database_name
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
 NODE_ENV=development
 PORT=
 APP_HOST=http://localhost
 API_VERSION=v1
 JWT_SECRET=
-AUTH_SERVICE_BASE_URL=
 OMDB_API_KEY=
